@@ -27,6 +27,7 @@ These changes are merged into the `main` branch but have not yet been tagged as 
 * `Count::MatchingRowsInLookup` previously returned Integers. Now it defaults to returning Strings, since many of the transforms assume all field values will be strings. If you were calling `Count::MatchingRowsInLookup` in a job and working with the integer result as an integer within that job, this will be a breaking change. In https://github.com/lyrasis/kiba-extend/pull/69[PR#69]
 
 ==== Added
+* Add `Rename::Fields` transform. In https://github.com/lyrasis/kiba-extend/pull/74[PR#74]
 * Add `Name::SplitInverted` and `Name::ConvertInvertedToDirectForm` transforms. In https://github.com/lyrasis/kiba-extend/pull/74[PR#74]
 * Add `Allable` mixin module for transforms that accept `fields: :all`. In https://github.com/lyrasis/kiba-extend/pull/73[PR#73]
 * Add `Cspace::AddressCountry` transform. In https://github.com/lyrasis/kiba-extend/pull/72[PR#72]. Made more configurable in https://github.com/lyrasis/kiba-extend/pull/74[PR#74]
